07/10/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the Shortcuts option pane. However, it currently it doesn't work. 
      It only displays the built in options and the combo box.
    * Updated the shortcuts option pane so that it shows the select shortcut
      dialog.

07/06/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Rewrote the Messages class. Now it loads messages on demand and only
      loads the messages that it needs but allows the Locale to be changed at
      any time. It also now supports different countries and variants.

06/27/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the GUIUtilities class for handling utility functions in jsXe.
    * Added the GrabKeyDialog which will be used to assign shortcuts.
    * Updated many classes for supporting shortcuts.

06/23/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added back rudimentary key bindings using Swing Actions so they get
      dispached by Swing and are displayed in menus. But infrastructure is
      in place to allow jsXe to catch key bindings itself.

06/21/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Moved EnhancedMenu to it's own package. I will be creating a new menu
      class that is specially designed for jsXe's LocalizedActions
    * Created a new option for how many items can be in menus before they spill
      over.

06/20/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated actions in jsXe so that actions can be easily localized and
      so that they can be assigned shortcuts. Future actions that are registered
      with jsXe will extend this class. The ActionManager now manages ActionSets
      and key bindings within jsXe.

06/15/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a new Status column to the Plugin Manager dialog
    * Added new plugin properties for the plugin author and release date

06/14/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the EditAction class for future actions in jsXe.