@@ -1,3 +1,10 @@
+07/12/2006  Ian Lewis   <IanLewis@member.fsf.org>
+
+    * Added functionality to save keyboard shortcuts. The shortcuts themselves
+      work but the shortcut labels for menu items are not updated when the
+      action is updated. This is a bug that is fixed in the beta for Java 6
+      but obviously it can't wait that long.
+
 07/10/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
     * Added the Shortcuts option pane. However, it currently it doesn't work. 
